--- a/Css/media.css
+++ b/Css/media.css
@@ -4,8 +4,19 @@
     justify-items: center;
     gap: 20px;
   }
+  .header{
+    padding: 50px 0;
+  }
 }
 @media (max-width: 1200px){
+  .page1-top-left{
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+  }
+  .header{
+    padding: 40px 0;
+  }
   .header-navs{
     display: none;
   }
@@ -34,8 +45,27 @@
   .page2-name{
     height: 51px;
   }
+  .case-box{
+    padding: 40px 30px;
+  }
+  .page2{
+    padding-top: 40px;
+  }
+  .page1-btm{
+    padding-top: 30px;
+  }
+  .case{
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
 @media (max-width: 1000px){
+  .page2{
+    padding-top: 40px;
+  }
+  .header{
+    padding: 30px 0;
+  }
   .cont-right{
     display: none;
   }
@@ -95,8 +125,17 @@
 }
 @media (max-width: 800px)
 {
+  .page1-btm{
+    padding-top: 0;
+  }
+  .logo{
+    max-width: 150px;
+  }
+  .logo>img{
+    width: 100%;
+  }
   .header{
-    padding: 30px 0;
+    padding: 20px 0;
   }
   .page2{
     padding-top: 40px;
@@ -110,9 +149,6 @@
   .footer{
     padding-top: 30px;
   }
-  .page1-btm{
-    padding-top: 20px;
-  }
   .case{
     padding-top: 30px;
   }
@@ -123,11 +159,16 @@
     flex-direction: column;
     gap: 20px;
     align-items: center;
+    margin-bottom: 20px;
   }
   .case-texts{
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    margin-bottom: 20px;
+  }
+  .case-box{
+    padding: 40px 30px;
   }
   .case-name{
     margin-right: 0;
@@ -188,15 +229,34 @@
     align-items: center;
     text-align: center;
     gap: 20px;
+    margin-bottom: 20px;
   }
   .cont-name{
     margin: 0;
+  }
+  .footer-main{
+    margin-top: 20px;
   }
   .footer-main-right{
     max-width: 100%;
   }
   .page2-name{
     margin-right: 0;
+  }
+  .page2-main{
+    padding-bottom: 20px;
+  }
+  .test{
+    padding-top: 30px;
+  }
+  .test-texts{
+    margin-bottom: 20px;
+  }
+  .test__slider-nav{
+    margin-top: 20px;
+  }
+  .test__slider{
+    padding-top: 20px;
   }
 }
 @media (max-width: 700px){
