--- a/Css/styles.css
+++ b/Css/styles.css
@@ -4,6 +4,8 @@ html, body{
   font-weight: 400;
   line-height: 23px;
   letter-spacing: 0%;
+  position: relative;
+  scroll-behavior: smooth;
 }
 .header {
   padding: 70px 0;
@@ -11,6 +13,32 @@ html, body{
 .container {
   position: relative;
   margin-inline: 100px;
+}
+.lazy-load-left {
+  opacity: 0;
+  transform: translateX(-50px);
+  transition: opacity 0.5s, transform 0.5s;
+}
+.lazy-load-right {
+  opacity: 0;
+  transform: translateX(50px);
+  transition: opacity 0.5s, transform 0.5s;
+}
+.lazy-load-btm {
+  opacity: 0;
+  transform: translateY(-50px);
+  transition: opacity 0.5s, transform 0.5s;
+}
+.lazy-load-z {
+  opacity: 0;
+  transform: translateZ(-500px);
+  transition: opacity 0.5s, transform 0.5s;
+}
+.lazy-load {
+  opacity: 1;
+  transform: translateX(0);
+  transform: translateY(0);
+  transform: translateZ(0);
 }
 .header-nav {
   display: flex;
@@ -55,7 +83,10 @@ html, body{
   margin-bottom: 34px;
 }
 .page1-top-left {
-  max-width: 530px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
 }
 .page1-text-top {
   font-size: 60px;
@@ -316,25 +347,22 @@ html, body{
 .case-item{
   padding: 0 64px;
   border-right: 1px solid rgb(255, 255, 255);
-  position: relative;
-  display: block;
-  min-height: 186px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 .case-item-text {
   font-size: 18px;
   font-weight: 400;
   line-height: 23px;
   margin-bottom: 20px;
-  max-height: 75%;
-  overflow: hidden;
 }
 .case-item:last-child{
   border: none;
 }
 .case-item-link {
   margin-bottom: 23px;
-  position: absolute;
-  bottom: 0;
   color: rgb(185, 255, 102);
   left: 60px;
 }
@@ -448,6 +476,13 @@ html, body{
   font-weight: 400;
   line-height: 23px;
 }
+.page3-arrow:nth-child(2){
+  padding-top: 15px;
+}
+.left img{
+  padding-top: 0;
+  padding-bottom: 15px;
+}
 .page3-arrow-space {
   padding: 20px 17px;
   border-radius: 50%;
@@ -459,6 +494,61 @@ html, body{
 }
 .right img, .right2 svg {
   transform: rotate(180deg);
+}
+.callback {
+  background-color: #bfbcbc;
+  padding: 20px;
+  border-radius: 20px;
+  border: 2px solid black;
+  z-index: 150;
+  transform: translate(50%, -50%);
+  position: fixed;
+  top: 50%;
+  right: 50%;
+  scale: 1.2;
+}
+.callback-item {
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  gap: 20px;
+}
+.callback-item>input{
+  border-radius: 10px;
+  padding: 5px 10px;
+}
+.callback-exit {
+  width: 100%;
+  height: 30px;
+  display: flex;
+}
+.callback-ext-helper {
+  position: relative;
+}
+.callback-line {
+  position: absolute;
+  width: 30px;
+  height: 5px;
+  background-color: black;
+  border-radius: 10px;
+}
+.callback-line:first-child{
+  rotate: 45deg;
+}
+.callback-line:last-child{
+  rotate: -45deg;
+}
+.blur{
+  filter: blur(10px);
+}
+.callback-btn {
+  padding: 10px 20px;
+  border-radius: 10px;
+  background-color: rgb(185, 255, 102);
+  transition: all .4s;
+}
+.callback-btn:hover{
+  scale: 1.1;
 }
 .team-name{
   font-size: 20px;
@@ -475,16 +565,16 @@ html, body{
 .team__slider div {
   height: 100%;
 }
+.footer-form>input{
+  padding: 5px 15px;
+}
 .team__slide {
-  display: flex;
   max-width: 387px;
   gap: 40px;
   padding: 40px 35px;
   min-height: 330px;
-  display: table-cell;
   height: 100%;
-  margin-right: 40px;
-  box-sizing: border-box;
+  margin-inline: 20px;
   border: 1px solid rgb(25, 26, 35);
   border-radius: 45px;
   box-shadow: 0px 5px 0px 0px rgb(25, 26, 35);
@@ -864,8 +954,9 @@ html, body{
   line-height: 23px;
   background-color: rgb(41, 42, 50);
 }
-.footer-form input::placeholder{
+.footer-form input{
   padding-left: 35px;
+  color: white;
 }
 .footer-btn {
   font-size: 20px;
